--- a/init.org
+++ b/init.org
@@ -713,7 +713,8 @@ Clojure mode and CIDER are dev versions locally
       :config
       (setq clojure-toplevel-inside-comment-form t)
       (setq clojure-indent-style 'align-arguments)
-      (put-clojure-indent 'dofor 1))
+      (put-clojure-indent 'dofor 1)
+      (put-clojure-indent 'match 1))
 
     (use-package cider
       :load-path "~/projects/dev/cider/"
