Racer mode stuff

--- a/init.org
+++ b/init.org
@@ -814,7 +814,15 @@ Use the hydra I cooked up recently
 
 #+BEGIN_SRC emacs-lisp
   (use-package rust-mode)
-  (use-package racer)
+  (use-package racer
+    :config
+    (add-hook 'rust-mode-hook #'racer-mode)
+    (add-hook 'racer-mode-hook #'eldoc-mode)
+    (add-hook 'racer-mode-hook #'company-mode)
+    (setq company-tooltip-align-annotations t)
+    :bind (:map
+           rust-mode-map
+           ("TAB" . company-indent-or-complete-common)))
 #+END_SRC
 ** Elm
 
