--- a/init.org
+++ b/init.org
@@ -737,8 +737,14 @@ Clojure mode and CIDER are dev versions locally
       (setq clojure-indent-style 'align-arguments)
       (put-clojure-indent 'dofor 1)
       (put-clojure-indent 'match 1)
+
       (put-clojure-indent 'context 1)
       (put-clojure-indent 'GET 1)
+      (put-clojure-indent 'compojure/GET 1)
+      (put-clojure-indent 'compojure/POST 1)
+      (put-clojure-indent 'compojure/PATCH 1)
+      (put-clojure-indent 'compojure/PUT 1)
+      (put-clojure-indent 'compojure/DELETE 1)
       (put-clojure-indent 'POST 1)
       (put-clojure-indent 'PATCH 1)
       (put-clojure-indent 'DELETE 1))
