--- a/init.org
+++ b/init.org
@@ -939,10 +939,11 @@ are we on that machine?
 For some reason this was getting lost in the startup shenanigans so we set it once things settle down.
 
 #+BEGIN_SRC emacs-lisp
+  (set-frame-font "Fira Code" nil t)
   (defun personal/set-font ()
     (interactive)
-    (set-frame-font "Fira Code-13" nil t))
-  (run-with-idle-timer 1 nil #'personal/set-font)
+    (set-face-attribute 'default nil :height 150))
+  (add-hook 'emacs-startup-hook #'personal/set-font)
 #+END_SRC
 * Post
 
