Edit project file in resize-window list

--- a/init.org
+++ b/init.org
@@ -141,7 +141,9 @@ This variable tells Emacs to prefer the =.el= file if it's newer, even if there 
     (resize-window-add-choice ?d (lambda () (dired "~/projects/dev"))
                               "Visit dev directoryq")
     (resize-window-add-choice ?m (lambda () (resize-window--window-push))
-                              "Push window state onto window stack"))
+                              "Push window state onto window stack")
+    (resize-window-add-choice ?v (lambda () (find-file "~/projects/projects.org"))
+                              "Edit project file"))
 #+END_SRC
 
 - turn off the stupid system bell
