Set the racer-mode hook in init, not config
this requires itself so doing it at config (ie, load time) means it
adds its load hook when its loaded... so it never happens. need these
hooks to be done at startup

--- a/init.org
+++ b/init.org
@@ -849,7 +849,7 @@ Use the hydra I cooked up recently
 #+BEGIN_SRC emacs-lisp
   (use-package rust-mode)
   (use-package racer
-    :config
+    :init
     (add-hook 'rust-mode-hook #'racer-mode)
     (add-hook 'racer-mode-hook #'eldoc-mode)
     (add-hook 'racer-mode-hook #'company-mode)
