--- a/init.org
+++ b/init.org
@@ -881,6 +881,48 @@ Intero is no longer supported. Trying with just haskell lsp. Taken from https://
     :after lsp-mode
     :hook (haskell-mode . lsp-haskell-enable))
 #+end_src
+** Prolog
+
+Information taken from https://www.metalevel.at/pceprolog/ so I can
+follow along with https://www.metalevel.at/prolog/facets.
+
+Require prolog-mode. a built-in to emacs
+
+#+BEGIN_SRC emacs-lisp
+  (defun prolog-insert-prompt ()
+    (interactive)
+    (insert "\n%?- "))
+
+  (defun prolog-insert-comment-block ()
+    "Insert a PceEmacs-style comment block like /* - - ... - - */ "
+    (interactive)
+    (let ((dashes "-"))
+      (dotimes (_ 36) (setq dashes (concat "- " dashes)))
+      (insert (format "/* %s\n\n%s */" dashes dashes))
+      (forward-line -1)
+      (indent-for-tab-command)))
+
+  (use-package prolog
+    :after (ediprolog)
+    :config
+    (setq prolog-system 'swi
+          prolog-program-switches '((swi ("-G128M" "-T128M" "-L128M" "-O"))
+                                    (t nil))
+          prolog-electric-if-then-else-flag t)
+    :bind (:map prolog-mode-map
+                ("C-c C-k" . ediprolog-dwim)
+                ("C-c k" . ediprolog-dwim)
+                ("C-;" . prolog-insert-comment-block)
+                ("C-c j" . prolog-insert-prompt)
+                ("C-c C-j" . prolog-insert-prompt)))
+#+END_SRC
+
+
+Then use ediprolog mode. Doesn't seem super necessary as prolog-mode allows me to consult a buffer and get a prolog up and running but here we are.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package ediprolog)
+#+END_SRC
 
 * Machine Configs
 ** Work
