--- a/init.org
+++ b/init.org
@@ -716,8 +716,9 @@ Standard lisp editing environment
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
-  (defconst personal/my-lisps '(clojure lisp emacs-lisp cider-repl
-                                        ;; geiser geiser-repl racket scheme slime repl
+  (defconst personal/my-lisps '(clojure lisp emacs-lisp cider-repl geiser
+                                        geiser-repl scheme
+                                        ;;racket slime repl
                                         ))
 
   (hook-up-modes personal/my-lisps #'standard-lisp-environment)
