--- a/init.org
+++ b/init.org
@@ -1014,7 +1014,10 @@ For some reason this was getting lost in the startup shenanigans so we set it on
   (set-frame-font "Fira Code" nil t)
   (defun personal/set-font ()
     (interactive)
-    (set-face-attribute 'default nil :height 130))
+    (set-face-attribute 'default nil :height (cond
+                                              (personal/linux-machine 130)
+                                              (personal/mac-machine 150)
+                                              (t 140))))
   (add-hook 'emacs-startup-hook #'personal/set-font)
 #+END_SRC
 * Post
