Paredit had other thoughts about C-j

--- a/init.org
+++ b/init.org
@@ -772,7 +772,9 @@ Clojure mode and CIDER are dev versions locally
     :init
     (add-hook 'after-init-hook #'global-flycheck-mode))
 
-  (use-package paredit)
+  (use-package paredit
+    :bind (:map paredit-mode-map
+                ("C-j" . nil)))
 
   (use-package clojure-mode
     :load-path "~/projects/dev/clojure-mode"
