kaolin light and highlight colors

--- a/init.org
+++ b/init.org
@@ -374,8 +374,9 @@ Turn off the quite ugly ui chrome
   (use-package sublime-themes)
 
   (use-package gruvbox-theme)
-  (load-theme 'brin)
-  (setq hl-line-face '((:background "#3d424d")))
+  (load-theme 'kaolin-light)
+  (set-face-foreground 'highlight "black")
+  (set-face-background 'highlight "LightBlue")
 #+end_src
 
 
@@ -839,12 +840,12 @@ Clojure mode and CIDER are dev versions locally
 Use lsp-mode with the excellent lsp-clojure package.
 
 #+BEGIN_SRC emacs-lisp
-  (when personal/work-machine
+  (when (or personal/work-machine personal/mac-machine)
     (use-package lsp-mode
       :init
       (setq lsp-clojure-server-command '("bash" "-c" "cd ~/projects/clojure/clojure-lsp && lein run"))
       (setq lsp-enable-indentation nil)
-      (setq lsp-enable-completion-at-point nil)
+      ;; (setq lsp-enable-completion-at-point nil)
       ;; (setq indent-region-function #'clojure-indent-function)
       (add-hook 'clojure-mode-hook #'lsp)
       (add-hook 'clojurec-mode-hook #'lsp)
@@ -859,7 +860,7 @@ Use lsp-mode with the excellent lsp-clojure package.
 Use the hydra I cooked up recently
 
 #+BEGIN_SRC emacs-lisp
-  (when personal/work-machine
+  (when (or personal/work-machine personal/mac-machine)
     (use-package lsp-clojure-hydra
       :after (lsp-mode lsp-mode cider)
       :load-path "~/projects/elisp/lsp-clojure-hydra"
