completion takes a dummy arg now

--- a/init.org
+++ b/init.org
@@ -891,7 +891,7 @@ Clojure mode and CIDER are dev versions locally
     (setq cider-show-error-buffer nil)
     (setq cider-repl-display-help-banner nil)
     (setq cider-repl-pop-to-buffer-on-connect 'display-only)
-    (setq cider-repl-tab-command #'company-indent-or-complete-common)
+    (setq cider-repl-tab-command (lambda () (company-indent-or-complete-common nil)))
     :bind (:map
            cider-repl-mode-map
            ("RET" . cider-repl-newline-and-indent)
@@ -974,7 +974,7 @@ Use the hydra I cooked up recently
     (setq company-tooltip-align-annotations t)
     :bind (:map
            rust-mode-map
-           ("TAB" . company-indent-or-complete-common)))
+           ("TAB" . (lambda () (company-indent-or-complete-common nil)))))
 #+END_SRC
 ** Haskell
 #+BEGIN_SRC emacs-lisp
