Use personal copy of lsp-mode

--- a/init.org
+++ b/init.org
@@ -881,6 +881,7 @@ Clojure mode and CIDER are dev versions locally
            ("C-j" . comint-send-input)))
 
   (use-package cider
+    :demand t
     :load-path "~/projects/dev/cider/"
     :init
     (load "cider-autoloads" t t)
@@ -933,21 +934,32 @@ Clojure mode and CIDER are dev versions locally
 Use lsp-mode with the excellent lsp-clojure package.
 
 #+BEGIN_SRC emacs-lisp
-  (when (or personal/work-machine personal/mac-machine)
-    (use-package lsp-mode
-      :init
-      (setq lsp-clojure-server-command '("bash" "-c" "cd ~/projects/clojure/clojure-lsp && lein run"))
-      (setq lsp-enable-indentation nil)
-      ;; (setq lsp-enable-completion-at-point nil)
-      ;; (setq indent-region-function #'clojure-indent-function)
-      (add-hook 'clojure-mode-hook #'lsp)
-      (add-hook 'clojurec-mode-hook #'lsp)
-      (add-hook 'clojurescript-mode-hook #'lsp)
-      :config
-      (require 'lsp-clojure)
-      (add-to-list 'lsp-language-id-configuration '(clojure-mode . "clojure"))
-      (add-to-list 'lsp-language-id-configuration '(clojurec-mode . "clojure"))
-      (add-to-list 'lsp-language-id-configuration '(clojurescript-mode . "clojurescript"))))
+  (use-package lsp-mode
+    :load-path "~/projects/elisp/lsp-mode"
+    :hook ((clojure-mode . lsp)
+           (clojurec-mode . lsp)
+           (clojurescript-mode . lsp))
+    :init
+    ;; (setq lsp-enable-completion-at-point nil)
+    ;; (setq indent-region-function #'clojure-indent-function)
+    :config
+    (require 'lsp-clojure)
+    (dolist (m '(clojure-mode clojurec-mode clojurescript-mode))
+      (add-to-list 'lsp-language-id-configuration `(,m . "clojure")))
+    (setq lsp-clojure-server-command '("bash" "-c" "cd ~/projects/clojure/clojure-lsp && lein run")
+          lsp-enable-indentation nil)
+    ;; (add-hook 'clojure-mode-hook #'lsp)
+    ;; (add-hook 'clojurescript-mode-hook #'lsp)
+    ;; (add-hook 'clojurec-mode-hook #'lsp)
+    )
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+  (defun personal/stop-lsp ()
+    (interactive)
+    (remove-hook 'clojure-mode-hook #'lsp)
+    (remove-hook 'clojurec-mode-hook #'lsp)
+    (remove-hook 'clojurescript-mode-hook #'lsp))
 #+END_SRC
 
 Use the hydra I cooked up recently
