Indent clj-time do-at macro

--- a/init.org
+++ b/init.org
@@ -856,6 +856,7 @@ Clojure mode and CIDER are dev versions locally
     (setq clojure-toplevel-inside-comment-form t)
     (setq clojure-indent-style 'align-arguments)
     (put-clojure-indent 'dofor 1)
+    (put-clojure-indent 'do-at 1)
     (put-clojure-indent 'match 1)
 
     (put-clojure-indent 'context 1)
